# HighTide_ws-2026

./: .gitignore  LICENSE  README.md  ZED_Diagnostic_Results.json  deploy.sh
diagrams/: generate_diagrams.py
src/control/: package.xml  setup.cfg  setup.py
src/control/HighTide_control/: __init__.py  depth_controller_node.py  mode_manager_node.py  rc_override_node.py
src/control/hightide_control/: __init__.py  depth_controller_node.py  mode_manager_node.py  rc_override_node.py
src/drivers/: package.xml  setup.cfg  setup.py
src/drivers/HighTide_drivers/: __init__.py  actuator_driver_node.py
src/drivers/hightide_drivers/: __init__.py  actuator_driver_node.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: ExecuteTask.action  NavigateToWaypoint.action
src/interfaces/msg/: Detection.msg  DetectionArray.msg  MissionState.msg  NavigationTier.msg  ThrusterCommand.msg
src/interfaces/srv/: DropMarker.srv  FireTorpedo.srv  RotateToHeading.srv  SetDepth.srv  SetNavigationTier.srv
src/launch/: package.xml  setup.cfg  setup.py
src/launch/HighTide_launch/: __init__.py
src/launch/config/: mavros.yaml  params.yaml
src/launch/hightide_launch/: __init__.py
src/launch/launch/: full_system.launch.py  sys_id.launch.py
src/launch/urdf/: bluerov2_heavy.urdf
src/localization/: package.xml  setup.cfg  setup.py
src/localization/HighTide_localization/: __init__.py  nav_tier_manager_node.py
src/localization/config/: ekf_params.yaml
src/localization/hightide_localization/: __init__.py  nav_tier_manager_node.py
src/mission/: package.xml  setup.cfg  setup.py
src/mission/HighTide_mission/: __init__.py  mission_node.py
src/mission/HighTide_mission/behaviors/: __init__.py  bins.py  common.py  gate.py  octagon.py  pre_dive.py  slalom.py  torpedoes.py
src/mission/hightide_mission/: __init__.py  mission_node.py
src/mission/hightide_mission/behaviors/: __init__.py  bins.py  blackboard_keys.py  common.py  emergency.py  gate.py  octagon.py  pre_dive.py  return_home.py  slalom.py  torpedoes.py
src/navigation/: package.xml  setup.cfg  setup.py
src/navigation/HighTide_navigation/: __init__.py  dead_reckoning_node.py  search_pattern_node.py  vision_servo_node.py  waypoint_navigator_node.py  yaw_controller_node.py
src/navigation/hightide_navigation/: __init__.py  dead_reckoning_node.py  search_pattern_node.py  vision_servo_node.py  waypoint_navigator_node.py  yaw_controller_node.py
src/perception/: package.xml  setup.cfg  setup.py
src/perception/HighTide_perception/: __init__.py  detection_viz_node.py  target_tracker_node.py  yolo_detector_node.py
src/perception/hightide_perception/: __init__.py  detection_viz_node.py  octagon_table_detector_node.py  slalom_pole_detector_node.py  target_tracker_node.py  yolo_detector_node.py  yolo_pt_detector_node.py
src/perception/scripts/: EXPORTING_THE_ENGINE.md  export_yolo_seg_engine.py
src/tests/: package.xml  pytest.ini  setup.cfg  setup.py
src/tests/HighTide_tests/: __init__.py
src/tests/HighTide_tests/pool_tests/: pool_test_actuators.py  pool_test_depth.py  pool_test_navigation.py  pool_test_sensors.py  pool_test_thrusters.py
src/tests/hightide_tests/: __init__.py  fixer.py
src/tests/hightide_tests/pool_tests/: __init__.py  box.py  ekf_excitation_logger.py  pidexcitation.py  pidtest.py  pool_test_actuators.py  pool_test_barrel_roll.py  pool_test_depth.py  pool_test_navigation.py  pool_test_sensors.py  pool_test_thrusters.py  pool_test_torpedo_mission.py  prequalification_run.py  teleop.py  test_odom_subscriber.py  verify_model.py  yellow.py  yolo_test.py
src/tests/test/: conftest.py  test_advanced_control.py  test_advanced_mission.py  test_advanced_perception.py  test_control.py  test_dead_reckoning.py  test_drivers.py  test_localization.py  test_mission.py  test_navigation.py  test_perception.py  test_pid_controller.py
sys_id_bag_19700101_004837/: metadata.yaml
