<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>HighTide_control</name>
  <version>1.0.0</version>
  <description>RC Override controller, depth controller, and mode management for ArduSub</description>
  <maintainer email="team@HighTide.org">HighTide Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>HighTide_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
