<?xml version="1.0"?>
<package format="3">
  <name>hightide_launch</name>
  <version>1.0.0</version>
  <description>Launch files and system-level configuration for the hightide AUV</description>
  <maintainer email="team@hightide.org">hightide Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>hightide_interfaces</exec_depend>
  <exec_depend>hightide_control</exec_depend>
  <exec_depend>hightide_perception</exec_depend>
  <exec_depend>hightide_localization</exec_depend>
  <exec_depend>hightide_navigation</exec_depend>
  <exec_depend>hightide_mission</exec_depend>
  <exec_depend>hightide_drivers</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
