<?xml version="1.0"?>
<package format="3">
  <name>hightide_mission</name>
  <version>1.0.0</version>
  <description>py_trees behavior tree for hightide competition mission execution</description>
  <maintainer email="team@hightide.org">hightide Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>py_trees</depend>
  <depend>hightide_interfaces</depend>
  <export><build_type>ament_python</build_type></export>
</package>
