<?xml version="1.0"?>
<package format="3">
  <name>hightide_navigation</name>
  <version>1.0.0</version>
  <description>Waypoint navigation, vision servoing, dead reckoning, and strafe control</description>
  <maintainer email="team@hightide.org">hightide Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>hightide_interfaces</depend>
  <export><build_type>ament_python</build_type></export>
</package>
